frontend/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
    .contentContainer {
        @apply min-h-screen overflow-auto;
    }
    
    .background {
    @apply bg-center bg-no-repeat bg-cover fixed h-screen w-screen -z-10;
    }

    .header-container {
    @apply w-screen h-[100px] border-b-[1px] border-[#808691] fixed flex flex-row items-center bg-[#0d1117];
    }

    .icon {
    @apply text-[24pt] text-[#c1c9d9] hover:text-white hover:cursor-pointer mx-4;
    }

    .profile-icon {
    @apply h-[50px] w-[50px] bg-cover rounded-3xl ml-4 md:mr-8 border-[2px] 
    border-[#c1c9d9] hover:border-white hover:cursor-pointer;
    }

    .nav-icon {
    @apply font-semibold text-[#c1c9d9] text-[24pt] pl-8 hover:text-white hover:cursor-pointer;
    }

    .tooltip {
    @apply absolute w-auto p-2 min-w-max
            rounded-md shadow-md 
            text-white bg-black
            text-xs font-bold transition-all duration-100 scale-0 origin-top;
    }

    .nav-name-tooltip {
    @apply tooltip m-3 md:left-20 ml-5;
    }

    .nav-icon-tooltip {
    @apply tooltip mt-5 -ml-8;
    }

    .nav-menu-close-tooltip {
    @apply tooltip mt-5 -ml-8 icon;
    }

    .menu-dropdown-container {
    @apply h-[350px] w-[230px] md:w-0 absolute mt-[34px] -ml-[125px] 
            flex flex-row flex-wrap items-center
            border-[1px] border-[#808691] border-b-white border-l-white border-t-0 bg-[#0d1117] text-[#c1c9d9] -z-10;
    }

    .dropdown-hr {
    @apply text-[#6d727b] w-[230px];
    }

    .nav-menu-open-tooltip {
    @apply tooltip mt-5 -ml-3 icon;
    }

    .right-side-nav-icons {
    @apply md:scale-100 scale-0 w-0 md:w-auto;
    }

    .menu-toggle-btn {
    @apply md:scale-0 scale-100 md:mr-0 mr-10 md:w-0 w-auto;
    }

    .dropdown-btn {
    @apply hover:text-white w-[200px] h-[85px] text-left pl-[20px];
    }

    .main-content-container {
    @apply min-h-screen bg-[#0d1117] text-[#c1c9d9];
    }

    .user-auth-form {
    @apply flex flex-row flex-wrap p-8 rounded-xl border-[#c1c9d9] border-2 w-[350px] min-h-[175px] font-medium;
    }
    
    .user-auth-form > input {
    @apply w-[100%] mt-1 mb-5 text-black h-[35px] pl-2 rounded-md;
    }

    .user-auth-form > button {
    @apply mx-auto w-[100%] mt-5 mb-0 bg-green-600 text-white py-1 rounded-md  hover:bg-green-500;
    }

    .change-form-btn {
    @apply underline hover:text-white ml-2;
    }

    .change-form-prompt {
        @apply mt-3;
    }

    .user-auth-header {
    @apply w-[100%] mb-5 font-bold text-3xl text-left;
    }

    .add-photo-button {
    @apply w-[300px] h-[35px] bg-green-600 hover:bg-green-500 text-white mt-5 flex justify-center items-center rounded-md;
    }

    .arrow-circle {
    @apply w-[50px] h-[50px] m-3 hover:text-white
    }

    .photo-display {
    @apply w-[350px] h-[350px] mx-auto object-cover;
    }

    .photo-display:hover {
    @apply opacity-30 bg-gray-400 h-[100%] w-[100%];
    }

    .photo-container-button {
    @apply absolute top-[30%] left-[50%] translate-x-[-50%] text-white h-[10%] opacity-0
           w-[250px] rounded-md border-white border-[1px];
    }

    .photo-container-button:last-child {
    @apply top-[60%];
    }

    .photo-container-button:hover {
    @apply bg-blue-400 opacity-20;
    }

    .photo-container-button:last-child:hover {
    @apply bg-red-500 opacity-80;
    }

    .tag-window-input {
    @apply w-[90%] h-[30px] px-3 rounded-md mb-5 text-black;
    }

    .tag-display-area {
    @apply w-[90%] h-[230px] bg-white rounded-md mx-auto p-3 flex flex-wrap content-start;
    }

    .tag-window-close {
    @apply mt-2 mb-3 ml-auto mr-5 h-[25px] text-black hover:text-red-500 hover:cursor-pointer stroke-[28px];
    }

    .tag {
    @apply w-fit h-7 px-2 py-1 text-white bg-blue-500 mx-2 my-1 rounded-md flex items-center
    }

    .tag-remove {
    @apply hover:cursor-pointer hover:text-red-200 stroke-[28px];
    }
}

